--- a/home_work_27092025.md
+++ b/home_work_27092025.md
@@ -332,6 +332,165 @@ q.join()  # Ждем обработки всех элементов
 print("🎉 Все товары произведены и проданы!")
 ```
 
+
+## Пошаговое объяснение кода
+
+### Шаг 1: Импорт и настройка
+```python
+import threading
+import queue
+import time
+import random
+```
+- **`queue.Queue()`** - потокобезопасная очередь, которая сама handles синхронизацию
+- Не нужно явно использовать Lock - очередь уже потокобезопасна
+
+### Шаг 2: Функция producer (производитель)
+```python
+def producer(q, name):
+    for i in range(5):
+        item = f"Продукт от {name}-{i}"
+        q.put(item)  # Безопасное добавление в очередь
+        print(f"🛠️  {name} произвел: {item}")
+        time.sleep(random.uniform(0.1, 0.5))
+    q.put(None)  # Сигнал завершения
+```
+- **`q.put(item)`** - атомарная операция добавления
+- **`q.put(None)`** - специальный сигнал "конец данных"
+
+### Шаг 3: Функция consumer (потребитель)
+```python
+def consumer(q, name):
+    while True:
+        item = q.get()  # Блокируется если очередь пуста
+        if item is None:
+            q.put(None)  # Передаем сигнал дальше
+            break
+        print(f"🛒 {name} купил: {item}")
+        time.sleep(random.uniform(0.2, 0.7))
+        q.task_done()  # Подтверждаем обработку
+```
+- **`q.get()`** - блокируется и ждет, если очередь пуста
+- **`q.task_done()`** - уменьшает счетчик задач для `q.join()`
+
+### Шаг 4: Запуск и синхронизация
+```python
+q = queue.Queue()
+
+# Создаем и запускаем потоки
+for p in producers: p.start()
+for c in consumers: c.start()
+
+# Синхронизация
+for p in producers: p.join()  # Ждем завершения производителей
+q.join()  # Ждем обработки всех элементов в очереди
+```
+- **`q.join()`** - блокируется пока `q.task_done()` не будет вызван для всех элементов
+
+## Диаграмма последовательностей в Mermaid
+
+```mermaid
+sequenceDiagram
+    participant M as Main Thread
+    participant P1 as Завод-A
+    participant P2 as Завод-B
+    participant Q as Queue
+    participant C1 as Магазин-1
+    participant C2 as Магазин-2
+
+    M->>Q: создание очереди
+    M->>P1: start()
+    M->>P2: start()
+    M->>C1: start()
+    M->>C2: start()
+
+    loop 5 раз
+        P1->>Q: put("Продукт от Завод-A-0")
+        Note over Q: Размер: 1
+        Q->>C1: get() → продукт
+        C1->>Q: task_done()
+        Note over Q: Задачи: 0/1
+    end
+
+    loop 5 раз
+        P2->>Q: put("Продукт от Завод-B-0")
+        Note over Q: Размер: 1
+        Q->>C2: get() → продукт
+        C2->>Q: task_done()
+        Note over Q: Задачи: 0/1
+    end
+
+    P1->>Q: put(None) 🔚
+    P2->>Q: put(None) 🔚
+
+    C1->>Q: get() → None
+    C1->>Q: put(None) 🔁
+    C1->>M: завершение
+
+    C2->>Q: get() → None
+    C2->>Q: put(None) 🔁
+    C2->>M: завершение
+
+    M->>Q: join() ⏳
+    Note over M,Q: Ожидание task_done()
+    Q->>M: join() завершен ✅
+
+    M->>M: Программа завершена
+```
+
+## Альтернативная диаграмма с более детальным взаимодействием:
+
+```mermaid
+sequenceDiagram
+    participant P1 as Производитель-A
+    participant P2 as Производитель-B
+    participant Q as Queue
+    participant C1 as Потребитель-1
+    participant C2 as Потребитель-2
+
+    Note over P1,P2: Фаза производства
+    P1->>Q: put("Продукт-A0")
+    P2->>Q: put("Продукт-B0")
+    P1->>Q: put("Продукт-A1")
+    P2->>Q: put("Продукт-B1")
+    
+    Note over C1,C2: Фаза потребления
+    Q->>C1: get() → "Продукт-A0"
+    C1->>Q: task_done()
+    Q->>C2: get() → "Продукт-B0"
+    C2->>Q: task_done()
+    Q->>C1: get() → "Продукт-A1"
+    C1->>Q: task_done()
+    
+    Note over P1,P2: Сигналы завершения
+    P1->>Q: put(None)
+    P2->>Q: put(None)
+    
+    Note over C1,C2: Обработка сигналов
+    Q->>C1: get() → None
+    C1->>Q: put(None) ← Передача сигнала
+    C1->>C1: break ← Завершение
+    
+    Q->>C2: get() → None
+    C2->>C2: break ← Завершение
+```
+
+## Ключевые механизмы синхронизации:
+
+1. **Автоматическая блокировка** - Queue внутренне использует Lock
+2. **Условные переменные** - `get()` блокируется при пустой очереди
+3. **Счетчик задач** - `task_done()` и `join()` для отслеживания завершения
+4. **Сигналы завершения** - None как маркер окончания данных
+
+## Что происходит в программе:
+
+1. **2 производителя** создают по 5 продуктов каждый
+2. **2 потребителя** параллельно забирают продукты из очереди
+3. Когда производители заканчивают, они отправляют сигнал None
+4. Потребители получают сигнал и корректно завершаются
+5. `q.join()` гарантирует, что все продукты обработаны перед завершением
+
+**Результат:** Потокобезопасное взаимодействие без явного использования Lock!
 ---
 
 ## ⚡ 4. ПРАКТИЧЕСКИЕ ПРИМЕРЫ
