--- a/homework_18102025.md
+++ b/homework_18102025.md
@@ -438,7 +438,7 @@ class HomeworkBroker:
         writer.write(json.dumps(response).encode())
         await writer.drain()
 
-# TODO: Реализовать остальные методы
+# TODO: Реализовать остальные методы + клиент
 ```
 
 ## 📚 Рекомендуемые материалы для изучения
